add automatic version tagging

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>🐳 It works! 🐳</h1>
   <p>This page was automatically built by GitHub Actions.</p>
+  <p>This page was automatically built and VERSIONED!</p>
 </body>
 </html>
